AGOL Monitoring: update sharing
Update sharing function to include groups...and now I realize the whole dependencies method doesn't actually do what I want it to do, so need to re-do that whole segment. Committing what I have first.

--- a/AGOL_Monitoring_Dependencies.ipynb
+++ b/AGOL_Monitoring_Dependencies.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "1d321d1e",
    "metadata": {},
    "outputs": [],
@@ -26,25 +26,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "e133e173",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm_id = \"03209b91e33f4c588007319d18cd6e70\"\n",
+    "cm_id = \"22036bc8cafb4c50b6276c73f8f81c8e\"\n",
     "cm_item = gis.content.get(cm_id)\n",
     "\n",
-    "inventory_table = cm_item.tables[1]\n",
-    "dependencies_table = cm_item.tables[2]"
+    "monitoring_table = cm_item.tables[0]\n",
+    "dependencies_table = cm_item.tables[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cdf5b1bd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_sharing(sharing):\n",
+    "    groups = len(sharing.shared_with[\"groups\"])\n",
+    "    level = sharing.shared_with[\"level\"].value\n",
+    "    if groups:\n",
+    "        if level == \"PRIVATE\":\n",
+    "            return \"Groups only\"\n",
+    "        elif level == \"ORGANIZATION\":\n",
+    "            return \"Groups & Organization\"\n",
+    "        elif level == \"EVERYONE\":\n",
+    "            return \"Groups & Everyone\"\n",
+    "    else:\n",
+    "        if level == \"PRIVATE\":\n",
+    "            return \"Private\"\n",
+    "        elif level == \"ORGANIZATION\":\n",
+    "            return \"Organization\"\n",
+    "        elif level == \"EVERYONE\":\n",
+    "            return \"Everyone\"\n",
+    "\n",
     "def get_status(status):\n",
     "    if not status:\n",
     "        return \"None\"\n",
@@ -65,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9b38f270",
    "metadata": {},
    "outputs": [
@@ -73,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of items to add to table: 223\n",
-      "Number of items to add to table: 402\n"
+      "Number of items to add to items table: 225\n",
+      "Number of items to add to dependencies table: 403\n"
      ]
     }
    ],
@@ -90,13 +108,13 @@
     "    update_items_dict = {}\n",
     "    \n",
     "    items_dict[\"item_id\"] = item.id\n",
-    "    items_dict[\"item_url\"] = get_item_page_url(item.id)\n",
-    "    items_dict[\"service_url\"] = get_item_url(item)\n",
+    "    items_dict[\"item_title\"] = item.title\n",
+    "    items_dict[\"item_owner\"] = item.owner\n",
     "    items_dict[\"item_type\"] = item.type\n",
-    "    items_dict[\"title\"] = item.title\n",
-    "    items_dict[\"owner\"] = item.owner\n",
-    "    items_dict[\"sharing\"] = str(item.sharing.sharing_level.value).title()\n",
-    "    items_dict[\"status\"] = get_status(item.content_status)\n",
+    "    items_dict[\"item_page_url\"] = get_item_page_url(item.id)\n",
+    "    items_dict[\"item_url\"] = get_item_url(item)\n",
+    "    items_dict[\"item_sharing\"] = get_sharing(item.sharing)\n",
+    "    items_dict[\"item_status\"] = get_status(item.content_status)\n",
     "    items_dict[\"date_created\"] = item.created\n",
     "    items_dict[\"date_modified\"] = item.modified\n",
     "\n",
@@ -120,9 +138,15 @@
     "            dependencies_dict[\"origin_title\"] = item.title\n",
     "            dependencies_dict[\"dependent_id\"] = dependency.id\n",
     "            dependencies_dict[\"dependent_title\"] = dependency.title\n",
+    "            dependencies_dict[\"dependent_owner\"] = item.owner\n",
     "            dependencies_dict[\"dependent_type\"] = dependency.type\n",
-    "            dependencies_dict[\"dependent_item_url\"] = get_item_page_url(dependency.id)\n",
-    "            dependencies_dict[\"dependent_url\"] = get_item_url(dependency)\n",
+    "            dependencies_dict[\"dependent_item_page_url\"] = get_item_page_url(dependency.id)\n",
+    "            dependencies_dict[\"dependent_item_url\"] = get_item_url(dependency)\n",
+    "\n",
+    "            dependencies_dict[\"dependent_sharing\"] = get_sharing(item.sharing)\n",
+    "            dependencies_dict[\"dependent_status\"] = get_status(item.content_status)\n",
+    "            dependencies_dict[\"dependent_date_created\"] = item.created\n",
+    "            dependencies_dict[\"dependent_date_modified\"] = item.modified\n",
     "\n",
     "            update_dependencies_dict[\"attributes\"] = dependencies_dict\n",
     "            dependencies_list.append(update_dependencies_dict)\n",
@@ -144,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "82549bee",
    "metadata": {},
    "outputs": [],
@@ -153,8 +177,8 @@
     "# so before writing any new records we simply truncate tables\n",
     "# NOTE: can't use truncate like for users table because of the relationship class!\n",
     "# NOTE: Do we even need the relationship class? We're just shoving everything in a Dashboard/ExB anyway...?\n",
-    "inventory_table.delete_features(where=\"1=1\")\n",
-    "items_update = inventory_table.edit_features(adds=items_list)\n",
+    "monitoring_table.delete_features(where=\"1=1\")\n",
+    "items_update = monitoring_table.edit_features(adds=items_list)\n",
     "\n",
     "# Add items and dependencies to tables\n",
     "dependencies_table.delete_features(where=\"1=1\")\n",
